docs(readme): Добавляет предупреждение об устаревании продукта

--- a/doc/readme.adoc
+++ b/doc/readme.adoc
@@ -9,6 +9,14 @@ image::icon.png[Баран]
 [quote,Армянская пословица]
 Хороший пастух, если захочет, и от барана масло получит
 
+[WARNING]
+====
+30.10.2021 Росреестр предложил значительно усовершенствованный интерфейс для заказа выписок из ЕГРН, а старый интерфейс отключил.
+Следовательно, бот разучился заказывать выписки, но с новым интерфейсом это теперь и не нужно.
+
+Скачивать выписки в новых условиях бот обучен.
+====
+
 toc::[]
 
 include::target.adoc[]
