--- a/readme.adoc
+++ b/readme.adoc
@@ -1,4 +1,4 @@
-= Бот для заказа и скачивания выписок из ЕГРН
+= Бот для заказа (УСТАРЕЛО) и скачивания (АКТУАЛЬНО) выписок из ЕГРН
 2021-07-04
 
 image:doc/img/icon.png[Баран]
@@ -8,6 +8,14 @@ ____
 
 —  Армянская пословица
 ____
+
+[WARNING]
+====
+30.10.2021 Росреестр предложил значительно усовершенствованный интерфейс для заказа выписок из ЕГРН, а старый интерфейс отключил.
+Следовательно, бот разучился заказывать выписки, но с новым интерфейсом это теперь и не нужно.
+
+Скачивать выписки в новых условиях бот обучен.
+====
 
 [[_назначение_бота]]
 == Назначение бота
