docs(readme): Удаляет из документации сведения, касающиеся заказа выписок

--- a/doc/install.adoc
+++ b/doc/install.adoc
@@ -1,44 +1,6 @@
 == Установка и настройка (Windows)
 
-Установите на рабочем компьютере:
-
-. Браузер Opera версии 76.0.4017.177 -- для взаимодействия с порталом Росреестра:
-* Поддерживаемая версия Opera доступна по https://get.opera.com/pub/opera/desktop/76.0.4017.177/win/[ссылке].
-Разрядность браузера Opera (https://get.opera.com/pub/opera/desktop/76.0.4017.177/win/Opera_76.0.4017.177_Setup.exe[x86] или https://get.opera.com/pub/opera/desktop/76.0.4017.177/win/Opera_76.0.4017.177_Setup_x64.exe[x64]) выбирайте в соответствии с разрядностью операционной системы.
-[CAUTION]
-Чтобы избежать автообновления необходимо загрузить файл, не содержащий в названии «Autoupdate».
-* Opera необходимо установить в папку C:/Program Files или C:/Program Files (x86).
-Для этого после запуска установки Opera нажмите «Настройки» и в поле «Установить для» выберите «Для всех пользователей»;
-. Последнюю версию https://www.python.org/downloads/windows[Python] -- для выполнения исходного кода бота.
-. https://www.cryptopro.ru/system/files/private/csp/50/11998/CSPSetup-5.0.11998.exe[Крипто Про CSP] -- для работы с электронной подписью (ЭЦП) по ГОСТ;
-. https://www.cryptopro.ru/products/cades/plugin[КриптоПро ЭЦП Browser plug-in] -- для использования функционала Крипто Про CSP в браузерах;
-. КриптоПро ЭЦП Browser plug-in для браузера Opera согласно https://docs.cryptopro.ru/cades/plugin/plugin-installation-windows[инструкции] -- для включения возможности plug-in'а в браузере Opera.
-
-Настройка программ для работы с электронной подписью (ЭЦП):
-
-. Установите свой сертификат ЭЦП с помощью КриптоПро CSP.
-Множество https://www.yandex.ru/search/?text=Установка%20сертификата%20подписи%20через%20КриптоПро%20CSP[инструкций] можно найти в Интернете.
-. Настройте ЭЦП Browser Plug-in, добавив портал Росреестра (+++https://*.rosreestr.gov.ru+++) в «Список доверенных узлов».
-Для открытия окна настроек выполните: Пуск – КриптоПРО – Настройки ЭЦП Browser Plug-in.
-
-Подготовка браузера для продуктивной работы:
-
-. Установите менеджер паролей или форм, например, https://www.roboform.com/ru/download[RoboForm].
-. Закажите одну выписку из ЕГРН вручную https://rosreestr.gov.ru/wps/portal/p/cc_present/EGRN_1[на портале] Росреестра, при этом:
-* Сохраните в менеджере паролей информацию о лице, заказывающем выписки, что позволит Вам впоследствии существенно сократить время на запуск бота.
-* Подтвердите сохранение ПИН-кода к ЭЦП (иначе при работе бота Вам придётся вводить его вручную);
-+
-image::key_passwd.png[Сохранение ПИН-кода]
-+
-[TIP]
-====
-Для сброса сохраненного ПИН-кода из памяти компьютера воспользуйтесь приложением КриптоПро CSP.
-
-image::key_passwd_reset.png[Сброс ПИН-кода]
-====
-+
-* Во всех всплывающих окнах, запрашивающих разрешение на совершение действий с ЭЦП, подтвердите сохранение своего выбора для следующих раз (иначе во время работы бота Вам придётся делать это вручную);
-* Убедитесь, что, если на одну фамилию имеется несколько ЭЦП, то ЭЦП для подписания на сайте Росреестра расположена в списке первой.
+Установите на рабочем компьютере последнюю версию https://www.python.org/downloads/windows[Python] -- для выполнения исходного кода бота.
 
 Настройка бота:
 
@@ -48,9 +10,6 @@ image::key_passwd_reset.png[Сброс ПИН-кода]
 === Что делать, если нельзя установить Python?
 
 Существует способ создания переносимой версии бота, но для этого всё-таки нужен компьютер с Python, но зато только один.
-
-[NOTE]
-Данный способ не отменяет необходимость установки и настройки браузера Opera и программ для работы с ЭЦП на пользовательских компьютерах.
 
 Выполните следующие шаги на отдельном компьютере, предназначенном для сборки приложения:
 
@@ -89,7 +48,7 @@ pipenv lock --requirements > requirements.txt
 
 На рабочем компьютере в папке бота:
 
-. Модифицируйте файл install_venv.bat, закомментировав строку (добавьте в её начале слово _rem_ и пробел)
+. Модифицируйте файл install_venv.bat, закомментировав (добавьте в её начале слово _rem_ и пробел) или удалив строку
 [source,shell]
 set trustedHostParam=
 . Запустите файл install_venv.bat
