--- a/doc/target.adoc
+++ b/doc/target.adoc
@@ -1,12 +1,3 @@
 == Назначение бота
 
-Бот заказывает и *скачивает* выписки из Единого государственного реестра недвижимости (ЕГРН) вместо пользователя.
-При этом он практически не мешает пользоваться компьютером и браузером во время своей работы.
-
-Бот предназначен для работников органов государственной власти, органов местного самоуправления и юридических лиц, которые:
-
-* имеют право на бесплатное получение сведений из ЕГРН;
-* работают в организациях, которые не способны организовать взаимодействие с Росреестром через его веб-сервисы;
-* нуждаются в заказе не менее 3 выписок (иначе заказ проще вручную сделать).
-
-Для всех остальных рекомендую использовать https://spv.kadastr.ru[Сервис] предоставления сведений ФГБУ «ФКП Росреестра» или https://rosreestr.gov.ru/wps/portal/p/cc_present/ir_egrn[ФГИС ЕГРН].
+Бот больше не заказывает выписки из Единого государственного реестра недвижимости (ЕГРН), но по-прежнему *скачивает* их вместо пользователя.
