--- a/doc/use_case/download_run.adoc
+++ b/doc/use_case/download_run.adoc
@@ -2,18 +2,14 @@
 
 Готовые выписки можно скачать двумя способами:
 
-. С сайта Росреестра, решив капчу и введя код заказа;
+. С сайта Росреестра, зайдя в личный кабинет;
 . Нажав на ссылку в письме Росреестра с темой «Уведомление о завершении обработки запроса».
 
 Бот обучен только второму способу и только с помощью Microsoft Outlook.
 
 [NOTE]
 Росреестр не был бы так горячо любим, если бы письма с темой «Уведомление о завершении обработки запроса» приходили всегда.
-К счастью они приходят чаще всего (по моим объектам в 80% случаев).
-Видимо у Росреестра для балансировки нагрузки стоит некорректно настроенный сервер, который и не рассылает такие письма.
-Поэтому у Вас всегда останется возможность занять себя на работе вводом кода и решением капчи.
-А в качестве «вишенки на торте» в этом случае выписки получают странное расширение xml.original, что позволит Росреестру также развлечь Вас их переименованием.
-Что может быть интереснее?
+К счастью сейчас они приходят практически всегда (по моим объектам в 99% случаев).
 
 Порядок работы с ботом:
 
